src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs-earlybound-regions.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-both-are-structs-earlybound-regions.rs:9:12
   |
LL | fn foo<'a, 'b>(mut x: Vec<Ref<'a>>, y: Ref<'b>)
   |                           -------      ------- these two types are declared with different lifetimes...
...
LL |     x.push(y);
   |            ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

